--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -15,7 +15,7 @@
     margin: 100rpx auto;
     transform-style: preserve-3d;
     position: relative;
-    animation: move 30s linear infinite; // todo 这个是需要注释掉的
+    //animation: move 30s linear infinite;
   }
   @keyframes move
   {
@@ -60,6 +60,11 @@
     transform: rotateY(360deg);
     background-color: yellow;
     opacity: 0.5;
+  }
+  .stars{
+    width: 10rpx;
+    height: 10rpx;
+    background: yellow;
   }
 
 
