--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -62,9 +62,10 @@
     opacity: 0.5;
   }
   .stars{
-    width: 10rpx;
-    height: 10rpx;
+    width: 20rpx;
+    height: 20rpx;
     background: yellow;
+    transform: translate3d(250rpx,250rpx,200rpx);
   }
 
 
