--- a/src/pages/matchdata/index.less
+++ b/src/pages/matchdata/index.less
@@ -4,18 +4,46 @@
   background: #666666;
 .star_box{
   width: 750rpx;
-  height: 90%;
+  height: 950rpx;
   background: yellow;
+  overflow: hidden;
+  .star_view{
+    text-align: center;
+    background:#333333;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    .starts{
+      width: 50rpx;
+      height: 50rpx;
+      z-index: 80;
+      //position: absolute;
+      .pic_star{
+        width: 50rpx;
+        height: 50rpx;
+      }
+    }
+    .starts1{
+      width: 30rpx;
+      height: 30rpx;
+      z-index: 80;
+      position: absolute;
+      left: 110rpx;
+      top:200rpx;
+      .pic_star{
+        width: 30rpx;
+        height: 30rpx;
+      }
+    }
+  }
 }
   .wish{
     width: 750rpx;
-    height: 10%;
+    height: 100rpx;
     text-align: center;
     background: rebeccapurple;
+    line-height: 100rpx;
   }
-}
-.star_view{
-  text-align: center;
-  font-size: 50rpx;
-  color: black;
 }
